; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_hosts.c_scsi_host_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_hosts.c_scsi_host_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i64, i32 }

@SHOST_DEL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.Scsi_Host* @scsi_host_get(%struct.Scsi_Host* %0) #0 {
  %2 = alloca %struct.Scsi_Host*, align 8
  %3 = alloca %struct.Scsi_Host*, align 8
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %3, align 8
  %4 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %5 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @SHOST_DEL, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %14, label %9

9:                                                ; preds = %1
  %10 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %11 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %10, i32 0, i32 1
  %12 = call i32 @get_device(i32* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %9, %1
  store %struct.Scsi_Host* null, %struct.Scsi_Host** %2, align 8
  br label %17

15:                                               ; preds = %9
  %16 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  store %struct.Scsi_Host* %16, %struct.Scsi_Host** %2, align 8
  br label %17

17:                                               ; preds = %15, %14
  %18 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  ret %struct.Scsi_Host* %18
}

declare dso_local i32 @get_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
